[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "PyUIRender/_version.py"

# Add project metadata section
[project]
name = "PyUIRender"
description = "Qt UI file conversion tool"
authors = [
    { name = "Istiak Noor Rabbi", email = "istiaknoor26@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["twine", "build"]